--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,23 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "URL", "\"https://api.yummly.com/v1/\"")
+            buildConfigField("String", "API_ID", "\"62407325\"")
+            buildConfigField("String", "API_KEY", "\"955296fc681db8f8b82e0698d02a50c0\"")
         }
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "URL", "\"https://api.yummly.com/v1/\"")
+            buildConfigField("String", "API_ID", "\"62407325\"")
+            buildConfigField("String", "API_KEY", "\"955296fc681db8f8b82e0698d02a50c0\"")
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -26,9 +39,21 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:26.0.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    // Networking
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    // Permissions
+    implementation 'com.karumi:dexter:5.0.0'
 }
