--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 26
     defaultConfig {
         applicationId "kevinlamcs.android.com.yummlydummy"
         minSdkVersion 14
-        targetSdkVersion 28
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,11 +35,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
-    //noinspection GradleCompatible
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.android.support:recyclerview-v7:26.0.0'
+
+    // Convenience
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
 
     // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -53,9 +55,12 @@ dependencies {
 
     // Permissions
     implementation 'com.karumi:dexter:5.0.0'
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
 
     // Test
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.11.0'
     androidTestImplementation 'com.android.support.test:rules:1.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
