--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
+    allprojects {
+        repositories {
+            maven { url 'https://jitpack.io'}
+        }
+    }
+
     repositories {
         google()
         jcenter()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
         
